fdo#81330: When moving to a different sheet, set 3D flag on.

Change-Id: I16c6e687259635c4d0ac0e5dab0140941b409bc8
(cherry picked from commit 5e55d5ffb70437e917e4092f4030d5a454fd20d6)